# robot_autonomy

./: .gitmodules  Dockerfile  README.md  docker-compose.yml  setup_vars.sh
colcon_workspace/robot_autonomy_seb/: README.md  package.xml  setup.cfg  setup.py
colcon_workspace/robot_autonomy_seb/launch/: full.launch.py  icp_standalone.launch.py  map_standalone.launch.py  nbv_standalone.launch.py  publish_static_map_odom.launch.py  publish_static_tf.launch.py  sim_with_custom_configs.launch.py  spawn_turtlebot3.launch.py  turtlebot_simulation.launch.py
colcon_workspace/robot_autonomy_seb/models/turtlebot3_burger/: model.sdf
colcon_workspace/robot_autonomy_seb/params/: nav2_params.yml
colcon_workspace/robot_autonomy_seb/robot_autonomy_seb/: icp.py  map.py  next_best_view.py  topic_to_tf.py  utils.py
colcon_workspace/robot_autonomy_seb/rviz/: full.rviz  icp.rviz  map.rviz
colcon_workspace/robot_autonomy_seb/test/: test_icp.py  test_map.py
