<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_autonomy_seb</name>
  <version>0.0.0</version>
  <description>The package for my robot autonomy at DTU</description>
  <maintainer email="not@disclosed.org">Seb-sti1</maintainer>
  <license>GPL-3.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
