<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_autonomy_seb</name>
  <version>0.0.0</version>
  <description>The package for my robot autonomy at DTU</description>
  <author email="65665540+seb-sti1@users.noreply.github.com">Seb-sti1</author>
  <author email="walid.outtaleb@ensta-paris.fr">Nyllea</author>
  <author email="daregox@gmail.com">SimpingOjou</author>
  <maintainer email="65665540+seb-sti1@users.noreply.github.com">Seb-sti1</maintainer>
  <license>GPL-3.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
